--- a/ExamGenerator/static/css/dashboard.css
+++ b/ExamGenerator/static/css/dashboard.css
@@ -11,36 +11,14 @@ header {
     backdrop-filter: blur(5px);
 }
 
-header .navbar {
+.navbar {
+    margin: 2em;
+}
+
+.menu-link {
     display: flex;
-    align-items: center;
-    gap: 10px;
-    max-width: 1250px;
-    margin: 0 auto;
-    text-shadow: 1px 1px white;
-    margin-bottom: 20px;
-}
-
-.navbar .logo {
-    color: #fff;
-    width: 30px; 
-    text-decoration: none;
-    margin-right: 10px;
-}
-
-.navbar h1 {
-    font-weight: 500;
-    font-size: 2rem;
-    color: black;
-}
-
-.navbar .menu-link {
-    display: block;
-    position: fixed;
-    padding: 50px 20px; 
-    top: 0;
-    right: 0;    
-    margin-right: 100px;
+    justify-content: space-between;
+    width: 10%;
 }
 
 .greeting {
@@ -57,42 +35,40 @@ header .navbar {
     padding: 2em 6em;
 }
 
-/* .card-list .card-item {
-    background: #fff;
+.dashboard-main {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 2em 0 8em;
+}
+
+.dashboard.card-list .card-item {
+    color: var(--black-color);
     padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.04);
+    border-radius: 25px;
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.05);
     list-style: none;
     cursor: pointer;
     text-decoration: none;
     border: 2px solid transparent;
     transition: border 0.5s ease;
     height: 70px;
-} */
+} 
 
-.card-list .card-item:nth-of-type(1) {
+.dashboard.card-list .card-item:nth-of-type(1) {
     background-color: #ECD7EC;
 }
-.card-list .card-item:nth-of-type(2) {
+.dashboard.card-list .card-item:nth-of-type(2) {
     background-color: #D1E5F9;
 }
-.card-list .card-item:nth-of-type(3) {
+.dashboard.card-list .card-item:nth-of-type(3) {
     background-color: #BAE6E2;
 }
 
-.card-list .card-item:hover {
+.dashboard.card-list .card-item:hover {
     border: 2px solid #000;
 }
 
-.card-list span {
-    display: inline-block;
-    background: #F7DFF5;
-    margin-top: 32px;
-    padding: 8px 15px;
-    font-size: 0.75rem;
-    border-radius: 50px;
-    font-weight: 600;
-}
 
 hr {
     margin: 10px auto; /* Center horizontally */   
@@ -100,71 +76,71 @@ hr {
     max-width: 1250px;
     align-items: center;
 }
+
 /*for review cards*/
-.review{
-    margin: 0.5vh auto;
-    padding: 40px;
-    padding-left: 140px;
-    justify-content: center;
-}
-.review h2{
-    font-size: 2.5rem;
-    font-weight: 1000;
-}
-.card-list1 {
-    display: flex;
-    flex-wrap: wrap; 
-    gap: 50px;
-    max-width: 1250px;
+.review {
+    padding: 1em;
 }
 
-.card-list1 .card-item {
+.review h2 {
+    font-size: 2rem;
+    padding-left: 4em;
+}
+
+.board.card-list {
+    display: flex;
+    flex-wrap: wrap; 
+    justify-content: space-evenly;
+}
+
+.board.card-list .card-item {
     display: flex;
     flex-direction: column; 
     width: 240px;
     border: 1px solid #ccc; 
-    border-radius: 10px;
+    border-radius: 25px;
     overflow: hidden; 
     width: 20%;
     margin: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
-.card-list1 .card-body {
+
+.board.card-list .card-body {
     padding: 20px; 
     flex: 1; 
     border-top: 1px solid transparent;
 }
 
-.card-list1 .card-item:hover {
+.board.card-list .card-item:hover {
     border: 2px solid #000; 
 }
 
-.card-list1 .card-item:hover {
+.board.card-list .card-item:hover {
     border: 2px solid #000;
 }
 
-.card-list1 .card-item:nth-of-type(1) .card-header {
-    padding: 10px; 
+.board.card-list .card-item:nth-of-type(1) .card-header {
+    padding: 20px; 
     background-color: #FFCA95;
 }
 
-.card-list1 .card-item:nth-of-type(2) .card-header {
-    padding: 10px; 
+.board.card-list .card-item:nth-of-type(2) .card-header {
+    padding: 20px; 
     background-color: #FFCA95;
 }
 
-.card-list1 .card-item:nth-of-type(3) .card-header {
-    padding: 10px; 
+.board.card-list .card-item:nth-of-type(3) .card-header {
+    padding: 20px; 
     background-color: #BAE6E2;
 }
 
-.card-list1 .card-item:nth-of-type(4) .card-header {
-    padding: 10px; 
+.board.card-list .card-item:nth-of-type(4) .card-header {
+    padding: 20px; 
     background-color: #BAE6E2;
 }
 
 
-.card-list1 span {
+.board.card-list span {
     display: inline-block;
     background: #F7DFF5;
     margin-top: 32px;
@@ -174,15 +150,6 @@ hr {
     font-weight: 600;
 }
 
-.card-item1 h3 {
-    color: #000;
-    font-size: 2rem;
-    font-weight: 600;
-}
-.card-item1 p {
-    color: #000;
-    font-size: 0.9rem;
-}
 
 
 /*for exam*/
@@ -212,7 +179,7 @@ hr {
     overflow: hidden; 
     width: 20%;
     margin: 10px;
-    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
 }
 .exam .card-list1 .card-body {
     padding: 20px; 
@@ -452,8 +419,12 @@ nav ul li a.active {
     cursor: pointer;
     margin-top: 10px; 
     transition: 0.5s ease;
+    display: flex;
+    align-content: center;
+    justify-content: center;
 }
 
+.jump a:hover,
 .mind .photos .contact:hover {
     color: var(--black-color);
     background-color: var(--tertiary-color);
@@ -491,6 +462,10 @@ nav ul li a.active {
     color: white;
     cursor: pointer; 
     transition: 0.5s ease;
+    display: flex;
+    align-content: center;
+    justify-content: flex-start;
+    width: fit-content;
 }
 
 
