--- a/ExamGenerator/templates/dashboard1.html
+++ b/ExamGenerator/templates/dashboard1.html
@@ -1,50 +1,59 @@
 {% extends "/layout/game-base.html" %}
 
 {% block css_file %}
-<link rel="stylesheet" href="{{ url_for('static', filename='css/dash.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
 {% endblock %}
 
 {% block title %} File Upload {% endblock %} 
 
 {% block content %}
-    <header>
-        <nav class="navbar">
-            <div class="logo-container">
-                <img src="" width="10%" class="logo">
-                <h1>EasyGen</h1>
-            </div>
+    <nav class="navbar">
+        <ul>
+            <li class="logo-container"><a href="{{ url_for('views.index') }}">
+                    <img src="../static/images/logo1.svg" style="width: 100%;" class="logo">
+            </a></li>
+            
             <div class="menu-link">
-                <img src="https://static-00.iconduck.com/assets.00/search-icon-256x256-6b4tg3bl.png" class="logo">
-                <img src="https://cdn-icons-png.flaticon.com/512/6228/6228888.png" class="logo">
-                <img src="https://static.vecteezy.com/system/resources/thumbnails/020/911/737/small_2x/user-profile-icon-profile-avatar-user-icon-male-icon-face-icon-profile-icon-free-png.png" class="logo">
+                <li><a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-search"><circle cx="11" cy="11" r="8"/><path d="m21 21-4.3-4.3"/></svg>
+                </a></li>
+                <li><a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-bell"><path d="M6 8a6 6 0 0 1 12 0c0 7 3 9 3 9H3s3-2 3-9"/><path d="M10.3 21a1.94 1.94 0 0 0 3.4 0"/></svg>
+                </a></li>
+                <li><a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-circle-user-round"><path d="M18 20a6 6 0 0 0-12 0"/><circle cx="12" cy="10" r="4"/><circle cx="12" cy="12" r="10"/></svg>
+                </a></li>
             </div>
-        </nav>
-    </header>
-    <div class="card-list">
+        </ul>
+    </nav>
+
+    <div class="dashboard-main">
         <div class="greeting">
             <h3>What do you</h3>
             <h3>want to do?</h3>
         </div>
     
-        <a  href=" {{ url_for('views.upload') }}" class="card-item">
-            <h3>Generate Exam</h3>
-            <p>Upload a file to create an exam.</p>
-        </a>
-        
-        <a href=" {{ url_for('views.upload') }}" class="card-item">
-            <h3>Generate Reviewer</h3>
-            <p>Upload a file to create a reviewer.</p>
-        </a>
-        
-        <a href=" {{ url_for('views.upload') }}" class="card-item">
-            <h3>Metrics</h3>
-            <p>View Progress</p>
-        </a>
+        <div class="dashboard card-list">
+            <a href=" {{ url_for('views.upload') }}" class="card-item">
+                <h3>Generate Exam</h3>
+                <p>Upload a file to create an exam.</p>
+            </a>
+            
+            <a href=" {{ url_for('views.upload') }}" class="card-item">
+                <h3>Generate Reviewer</h3>
+                <p>Upload a file to create a reviewer.</p>
+            </a>
+            
+            <a href=" {{ url_for('views.upload') }}" class="card-item">
+                <h3>Metrics</h3>
+                <p>View Progress</p>
+            </a>
+        </div>
     </div>
     <hr> 
-    <div class="exam">
+    <div class="review">
         <h2>Exam Board</h2> 
-        <div class="card-list1">
+        <div class="board card-list">
             <div class="card-item">
                 <div class="card-header">
                     <h3>Exam 1</h3>
